--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,187 @@
-.test {
-    color: red;
+ /*REGULAR CSS*/
+
+html, body {
+  margin:0;
+  padding:0;
 }
+
+.title {
+  text-align: center;
+  margin: -15px -10px 40px;
+  padding: 8px 5px 5px 5px;
+  color: white;
+  font-family: Architects Daughter;
+}
+
+body {
+  background-image:url('../img/blue.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: Architects Daughter;
+}
+
+#heading {
+  font-size: 40px;
+}
+
+#subHeading {
+  font-size: 25px;
+}
+
+.initialDisplay {
+  max-width: 600px;
+  max-height: 400px;
+  display:'';
+}
+
+.tripInputs {
+  display: flex;
+  justify-content: center;
+  margin: 8px 10px 30px 10px;
+}
+
+.detailInputs {
+  text-align: center;
+  margin: 8px 10px 30px 10px;
+}
+
+.inputForm {
+  margin: 5px 5px 0px 5px;
+  width: 300px;
+  height: 28px;
+  font-family: Architects Daughter;
+  font-size:20px;
+}
+
+#secondDisplay {
+  display:none;
+}
+
+#finalDisplay {
+  display:none;
+}
+
+#costs {
+  text-align: center;
+  font-size: 20px;
+}
+
+#listResults {
+ justify-content: center;
+ text-align: center;
+ margin: auto;
+ font-size: 20px;
+}
+
+#resultDisplay {
+  font-size: 60px;
+  color: red;
+  
+}
+
+footer {
+  display:flex;
+  justify-content: center;
+  margin: 80px 0px 10px 0px;
+  color: #FFFFFF;
+}
+
+ /*BUTTONS*/
+ 
+.nav {
+  width: 140px;
+  height: 27px;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: rgba(192,192,192, 0.5);
+  font-size: 16px;
+  font-family: Architects Daughter;
+  box-shadow: none;
+  border-width: 2px;
+  border-color: #FFFFFF;
+  border-style: solid;
+}
+.nav:hover {
+  background-color: rgba(192,192,192, 0.9);  
+}
+
+a:link {
+  color:#FFFFFF;
+  text-decoration: none;
+}
+a:visited {color:#FFFFFF;}
+a:hover {color:#FFFFFF;}
+a:active {color:#FFFFFF;}  
+
+.bigBtn {
+  width: 300px;
+  height: 34px;
+  border-style: solid;
+  border-color: black;
+  font-size: 20px;
+}
+
+#displayTripBtn {
+  margin-top: 20px;
+}
+
+#savedListsBtn {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+#determineCostBtn {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+#btnForm {
+  display: flex;
+  justify-content: center;
+}
+
+ /*IMAGES AND MAP CONTAINERS*/
+ 
+.frontImage {
+    height:auto;
+    width:100%;
+    border-radius: 15px;
+}
+ 
+.imageContainer {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 15px;
+  height: auto;
+  width: 800px;
+  max-width: 100%;
+  max-height: 100%;
+  transition: none;
+  background: none;
+  border:0;
+
+}
+
+.mapContainer {
+  margin: auto;
+  height: 450px;
+  width: 800px;
+  max-width: 100%;
+  max-height: 100%;
+  transition: none;
+  background: none;
+  border:0;
+  padding:0;
+  margin-bottom: 30px;
+
+}
+
+.heiWid {
+  height:100%; 
+  width:100%; 
+  max-width:100%;
+  border:0;
+  padding:0;
+}
+
+
